k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: agile-app
  labels:
    name: agile-app
